--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/material": "^5.8.2",
     "@react-three/drei": "^9.23.5",
     "@react-three/fiber": "^8.6.0",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,6 +31,7 @@
     "react-icons": "^4.3.1",
     "react-materialize": "^3.10.0",
     "react-player": "^2.10.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
